--- a/setup.yml
+++ b/setup.yml
@@ -72,10 +72,13 @@
     #    systemctl restart docker
 
     - name: install python 3
-      shell: |
-        yum -y install python3
-        yum -y install python3-pip git
-        pip3 install --upgrade pip==21.3.1
+      yum:
+        name:
+          - python3
+          - python3-pip
+          - git
+    - name: install python 3
+      shell: pip3 install --upgrade pip==21.3.1
    
     - name: install docker sdk for python
       shell: |
