--- a/portainer-agent-stack.yml
+++ b/portainer-agent-stack.yml
@@ -5,7 +5,7 @@ services:
     image: portainer/agent:2.11.1
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - /var/lib/docker/volumes:/var/lib/docker/volumes
+      - /home/docker/volumes:/var/lib/docker/volumes
     networks:
       - agent_network
     deploy:
