--- a/package.yml
+++ b/package.yml
@@ -26,7 +26,10 @@
           - htop
           - telnet
           - wget
-          - net-tools   
+          - net-tools
+          - git
+          - python3
+          - python3-pip  
     - name: Restart service docker
       ansible.builtin.service:
         name: docker
