--- a/package.yml
+++ b/package.yml
@@ -12,6 +12,7 @@
         name: '*'
         state: latest
       tags: update
+      register: out
     - name: epel-release
       yum:
         name: epel-release
