--- a/trustip.yml
+++ b/trustip.yml
@@ -10,6 +10,7 @@
       shell: firewall-cmd --zone=public --remove-service=ssh --permanent
     - name: setup new rules
       shell: |
+        firewall-cmd --permanent --zone=public --add-rich-rule='rule family="ipv4" source address="192.168.253.1" port port="22" protocol="tcp" accept'
         firewall-cmd --permanent --zone=public --add-rich-rule='rule family="ipv4" source address="192.168.235.154" port protocol="tcp" port="22" accept'
     - name: reload firewall
       shell: firewall-cmd --reload
