--- a/package.yml
+++ b/package.yml
@@ -31,6 +31,7 @@
           - git
           - python3
           - python3-pip
+          - nfs-utils
 
   # Config limit parameters
     - name: soft
@@ -45,26 +46,6 @@
       shell: echo "fs.inotify.max_user_watches = 2048576" >>/etc/sysctl.conf
     - name: inotify.max_user_instances
       shell: echo "fs.inotify.max_user_instances = 524288" >>/etc/sysctl.conf
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
