--- a/cmanager.yml
+++ b/cmanager.yml
@@ -6,6 +6,48 @@
   vars_files:
     - variables.yml
   tasks:
+    - name: Upgrade all packages
+      yum:
+        name: '*'
+        state: latest
+      tags: update
+      register: out
+    - name: epel-release
+      yum:
+        name: epel-release
+      tags: epel
+    - name: Install a list of packages with a list variable
+      package:
+        name: "{{ packages }}"
+        state: present
+        update_cache: yes
+      vars:
+        packages:
+          - htop
+          - telnet-server
+          - telnet
+          - wget
+          - net-tools
+          - git
+          - python3
+          - python3-pip
+          - nfs-utils
+          - httpie
+
+  # Config limit parameters
+    - name: soft
+      shell: echo "*    soft    nofile 819200" >>/etc/security/limits.conf
+    - name: hard
+      shell: echo "*    hard    nofile 819200" >>/etc/security/limits.conf
+    - name: touch
+      shell: touch /etc/security/limits.conf
+    - name: file-max
+      shell: echo "fs.file-max = 200000" >>/etc/sysctl.conf
+    - name: inotify.max_user_watches
+      shell: echo "fs.inotify.max_user_watches = 2048576" >>/etc/sysctl.conf
+    - name: inotify.max_user_instances
+      shell: echo "fs.inotify.max_user_instances = 524288" >>/etc/sysctl.conf
+      
   # cai dat docker
     - name: Install yum utils
       yum:
@@ -77,7 +119,7 @@
            "insecure-registries": [
              "dockerhub.dttt.vn"
              ],
-           "data-root":"/FILEDR/docker",
+           "data-root":"/home/docker",
            "log-driver": "json-file",
            "log-opts": {
              "max-size": "10m",
@@ -113,11 +155,11 @@
         - 2377/tcp
         - 4789/tcp
         - 7946/tcp
-        - 2022/tcp
-        - 9001/tcp        
-#    - name: set up firewall
-#        firewall-cmd --reload
-#        systemctl restart docker
+        - 2377/udp
+        - 4789/udp
+        - 7946/udp
+        - 9001/tcp       
+
     - name: reload firewall
       ansible.builtin.service:
         name: firewalld
@@ -129,18 +171,18 @@
 
     - name: Clone a github repository
       git:
-        repo: "https://{{ username | urlencode }}:{{ password | urlencode }}@git.dttt.vn/gitadmin/ansible.git"
+        repo: "https://github.com/dangkhoa0797/setup.git"
         dest: /root/setup
         clone: yes
         update: yes
       tags: git    
-  #  - name: pull image 1
-  #    command: docker pull dockerhub.dttt.vn/documentserver:3.0
-  #    tags: im1
-    - name: pull image 2
-      shell: docker pull dockerhub.dttt.vn/etcdkeeper:latest
-    - name: pull image 3
-      shell: docker pull dockerhub.dttt.vn/imagemagick:latest
+#    - name: pull image 1
+#      command: docker pull dockerhub.dttt.vn/documentserver:3.0
+#      tags: im1
+#    - name: pull image 2
+#      shell: docker pull dockerhub.dttt.vn/etcdkeeper:latest
+#    - name: pull image 3
+#      shell: docker pull dockerhub.dttt.vn/imagemagick:latest
     
     # cai dat portainer
 
