--- a/cworker.yml
+++ b/cworker.yml
@@ -6,6 +6,44 @@
   vars_files:
     - variables.yml
   tasks:
+    - name: Upgrade all packages
+      yum:
+        name: '*'
+        state: latest
+      tags: update
+      register: out
+    - name: epel-release
+      yum:
+        name: epel-release
+      tags: epel
+    - name: Install a list of packages with a list variable
+      package:
+        name: "{{ packages }}"
+        state: present
+        update_cache: yes
+      vars:
+        packages:
+          - htop
+          - telnet
+          - wget
+          - net-tools
+          - git
+          - nfs-utils
+
+  # Config limit parameters
+    - name: soft
+      shell: echo "*    soft    nofile 819200" >>/etc/security/limits.conf
+    - name: hard
+      shell: echo "*    hard    nofile 819200" >>/etc/security/limits.conf
+    - name: touch
+      shell: touch /etc/security/limits.conf
+    - name: file-max
+      shell: echo "fs.file-max = 200000" >>/etc/sysctl.conf
+    - name: inotify.max_user_watches
+      shell: echo "fs.inotify.max_user_watches = 2048576" >>/etc/sysctl.conf
+    - name: inotify.max_user_instances
+      shell: echo "fs.inotify.max_user_instances = 524288" >>/etc/sysctl.conf
+        
   # cai dat docker
     - name: Install yum utils
       yum:
@@ -57,28 +95,13 @@
         enabled: yes
       become: yes
 
-    - name: install git pip
-      yum:
-        name:
-          - python3
-          - python3-pip
-          - git
-          - nfs-utils
-    - name: Upgrade pip
-      shell: pip3 install --upgrade pip==21.3.1
-   
-    - name: install docker sdk
-      shell: |
-        pip install docker
-        pip install docker-compose
-
     - name: Insert data to daemon.json
       shell: |
         printf '{
            "insecure-registries": [
              "dockerhub.dttt.vn"
              ],
-           "data-root":"/FILEDR/docker",
+           "data-root":"/home/docker",
            "log-driver": "json-file",
            "log-opts": {
              "max-size": "10m",
@@ -98,12 +121,7 @@
       shell: docker swarm join --token "{{ token }}" "{{ ip }}"
       tags: swarm
     
-    - name: mount volume
-      shell: |
-        yum -y install nfs-utils
-        mount -t nfs 10.0.68.73:/mnt/dockersharedfile/volumes /home/docker/volumes
-
-#    - name: Restart service docker
-#      ansible.builtin.service:
-#        name: docker
-#        state: restarted
+#    - name: mount volume
+#      shell: |
+#        yum -y install nfs-utils
+#        mount -t nfs 10.0.68.73:/mnt/dockersharedfile/volumes /home/docker/volumes
